<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    tools:context=".ui.MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="419dp"
        android:layout_height="333dp"
        android:layout_marginTop="228dp"
        android:src="@drawable/hj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="490dp"
        android:background="@color/c2"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/b1"
        android:textColor="@color/c1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/b2"
        android:textColor="@color/c3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:lineSpacingExtra="16sp"
        android:text="@string/s1"
        android:textColor="@color/c3"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s4"
        android:textColor="@color/c2"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s3"
        android:textColor="@color/c3"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s2"
        android:textColor="@color/c2"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="3dp"
        android:fontFamily="sans-serif"
        android:text="@string/s5"
        android:textColor="@color/c3"
        android:textSize="58sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>