<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    tools:context=".ui.SignUp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/alegreya_sans_bold"
            android:text="@string/s6"
            android:textColor="@color/c2"
            android:textSize="58sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/alegreya_sans"
            android:hint="@string/h1"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/alegreya_sans"
            android:hint="@string/h3"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/alegreya_sans"
            android:hint="@string/h2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="52dp"
            android:background="@color/c2"
            android:fontFamily="@font/alegreya_sans_bold"
            android:text="@string/b3"
            android:textColor="@color/c1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText13"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/s20"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="@dimen/d1"
            android:layout_height="@dimen/d3"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/s22"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText12" />

</androidx.constraintlayout.widget.ConstraintLayout>