<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPassword"
    android:background="@color/c1">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s19"
        android:textColor="@color/c2"
        android:textSize="@dimen/tx1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s17"
        android:textColor="@color/c3"
        android:textSize="@dimen/tx1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/s18"
        android:textColor="@color/c2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d2"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans"
        android:hint="@string/h1"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:background="@color/c2"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/b7"
        android:textColor="@color/c1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

</androidx.constraintlayout.widget.ConstraintLayout>