<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/b5"
        android:textAllCaps="false"
        android:textColor="@color/c2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:background="@color/c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/c1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:layout_marginTop="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:textAlignment="viewEnd"
        android:textColor="@color/c3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:text="@string/s12"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:text="@string/s13"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText10"
        app:layout_constraintEnd_toEndOf="@+id/editText10"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/editText10"
        app:layout_constraintTop_toTopOf="@+id/editText10"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:layout_marginTop="24dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:text="@string/s14"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toTopOf="@+id/editText6"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:layout_marginTop="24dp"
        android:background="@color/c2"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/b6"
        android:textColor="@color/c1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="@dimen/d1"
        android:layout_height="@dimen/d3"
        android:layout_marginTop="24dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/s34"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText11"
        app:layout_constraintEnd_toEndOf="@+id/editText11"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/editText11"
        app:layout_constraintTop_toTopOf="@+id/editText11"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>